Added Test cases and seed data