@@ -83,7 +83,12 @@
 		    <artifactId>commons-collections4</artifactId>
 		    <version>4.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
@@ -110,7 +115,18 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<skipTests>false</skipTests>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<includes>
+						<include>**/AllTestSuite.java</include>
+					</includes>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
   
